# BayesBench

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
bayesbench/: __init__.py
bayesbench/coin_flip/: __init__.py  aggregate.py  conditions.py  config.py  experiment.py  extraction.py  metrics.py  runner.py  submit_experiments.sh
bayesbench/common/: __init__.py  mcq.py  model.py  stats.py
bayesbench/common/models/: __init__.py  base_manager.py  config.py  interface.py  models.yaml  pool.py
bayesbench/medical_triage/: DESIGN_TRIAGE.md  aggregate.py  baselines.py  conditions.py  config.py  environment.py  extraction.py  metrics.py  runner.py  storyboard_prompt.py  submit_experiments.sh  user_sim.py
bayesbench/medical_triage/storyboards/: 1016.json  1019.json  1022.json  1023.json  1024.json  1036.json  1052.json  1094.json  1098.json  1101.json  1104.json  12.json  124.json  14.json  149.json  15.json  151.json  158.json  159.json  170.json  173.json  174.json  183.json  19.json  191.json  194.json  210.json  212.json  241.json  259.json  321.json  322.json  331.json  332.json  333.json  335.json  339.json  365.json  372.json  38.json  (+60 more)
bayesbench/orchestration/: __init__.py  delivery.py  environment.py  generate_storyboards.py  probes.py  run.py  text.py  user_sim.py
bayesbench/recommender_system/: DESIGN.md  __init__.py  aggregate.py  analyze_results.py  analyze_type_model.py  backfill_metrics.py  conditions.py  config.py  data.py  extraction.py  hybrid_type_model.py  metrics.py  pca_sweep.py  profile_em_types.py  recompute_metrics.py  runner.py  submit_experiments.sh  sweep_em_iterations.py  sweep_em_iterations_v2.py
bayesbench/recommender_system/data/: fitted_model.json  movie_selection.json
bayesbench/social_judgment/: DESIGN.md  __init__.py  aggregate.py  conditions.py  config.py  ddm.py  environment.py  extraction.py  metrics.py  reference.py  runner.py  storyboard_prompt.py  submit_experiments.sh  user_sim.py
bayesbench/social_judgment/data/: __init__.py  load_aita.py
bayesbench/social_judgment/grader/: grader_prompt.md
bayesbench/social_judgment/storyboards/: 105w73f.json  121psmo.json  126to10.json  9zjzfm.json  a0f9k1.json  a20wb0.json  ahh4q8.json  avhzbu.json  b678ly.json  b8nlgu.json  bdl9bj.json  (+89 more)
tests/: test_multiturn_flow.py  test_wired_runners.py
