[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI ("bayesbench" is already taken); the import package
# is `bayesbench` (e.g. `import bayesbench.coin_flip`).
name = "bayesbenchllm"
version = "0.1.0"
description = "A benchmark suite for measuring how LLMs update beliefs from evidence revealed over a conversation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ankur Samanta" }]
keywords = ["llm", "benchmark", "bayesian", "belief-updating", "evaluation", "multi-turn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Lower bounds: the package is tested against these versions (the exact pins used
# in development live in requirements.txt for reproducible runs).
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.15.3",
    "scikit-learn>=1.8.0",   # recommender-system EM/PCA type-model sweeps
    "datasets>=3.6.0",       # HuggingFace source data
    "openai>=1.86.0",        # storyboard generation
    "pandas>=2.3.3",         # tabular handling for analysis / plotting
    "matplotlib>=3.10.3",    # plotting the saved experiment JSONs
    "seaborn>=0.13.2",       # plotting the saved experiment JSONs
]

[project.optional-dependencies]
# Re-running model INFERENCE (extraction) needs the local serving stack
# (bayesbench.common.models, the vLLM-backed inference infra). The analysis
# layer and storyboard generation do NOT require these.
inference = [
    "torch>=2.7.0",
    "vllm>=0.9.1",
    "transformers>=4.52.4",
    "tokenizers>=0.21.4",
    "accelerate>=1.7.0",
    "psutil>=7.1.3",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/Ankur-Samanta/BayesBench"
Repository = "https://github.com/Ankur-Samanta/BayesBench"

[project.scripts]
bayesbench-storyboards = "bayesbench.orchestration.generate_storyboards:main"

[tool.setuptools.packages.find]
include = ["bayesbench*"]
namespaces = true

[tool.setuptools.package-data]
"bayesbench.common.models" = ["models.yaml"]
